factor out SerialPort; some minor fixen; skeleton for UART transport

--- a/MQTTSNGateway/CMakeLists.txt
+++ b/MQTTSNGateway/CMakeLists.txt
@@ -13,4 +13,7 @@
 #  Contributors:
 #     a1lu - initial version
 #*******************************************************************************/
+
+find_package(OpenSSL)
+
 ADD_SUBDIRECTORY(src)
